The IDE now clearly see that a _Message field is linked to a standard.properties key. If you rename one, it will rename the other at the same time. Fixed a few small bugs and cleaned the code to avoid potential exceptions